Revision history for {{$dist->name}}

{{$NEXT}}
  - Remove Alien::Packages::Cygwin
  - Remove App::which_package

1.92      2017-03-23 14:00:31 -0400
  - Remove Alien::o2dll

1.91      2017-03-23 12:40:05 -0400
  - Removed Alien::bz2 (now part of Alien::Libbz2)
  - Added Acme::Alien::DontPanic2
  - Added Acme::Ford::Prefect2
  - Added Alien::Base::Wrapper
  - Added Alien::Build::MB
  - Added Alien::Build::Plugin::Fetch::Cache
  - Added Alien::MSYS2
  - Added App::af
  - Updated my dists to latest

1.90      2017-01-31 11:03:39 -0500
  - Added Alien::Build
  - Added Alien::curl
  - Added Alien::pkgconf
  - Added Alien::xz
  - Added Dist::Zilla::Plugin::AlienBuild
  - Added PkgConfig::LibPkgConf
  - Updated my dists to latest

1.89      2016-11-23 09:08:48 -0500
  - Added Class::Inspector
  - Updated my dists to latest

1.88      2016-05-09 13:07:34 -0400
  - Added Clustericious::Coder::BSON
  - Added Dist::Zilla::App::Command::aliendeps
  - Added Dist::Zilla::Plugin::Alt
  - Added Dist::Zilla::Plugin::Author::Plicease
  - Updated my dists to latest  

1.87      2016-02-10 11:31:10 -0500
  - Updated my dists to latest  

1.86      2016-02-04 11:05:06 -0500
  - Updated my dists to latest  

1.85      2016-01-29 17:09:23 -0500
  - Add App::Ack back in
  - Updated my dists to latest  

1.84      2016-01-20 17:13:32 -0500
  - Add Test::Script::Async
  - Updated my dists to latest  

1.83      2016-01-14 14:11:58 -0500
  - Remove File::IgnoreReadonly
  - Add Test::Clustericious::Blocking
  - Updated my dists to latest

1.82      2016-01-06 07:38:17 -0500
  - Updated my dists to latest

1.81      2015-12-29 14:00:45 -0500
  - Added Text::Hunspell::FFI
  - Updated my dists to latest
  - Replace JSON::XS with Cpanel::JSON::XS

1.80      2015-12-26 07:42:04 -0700
  - Added Test::Alien and Alien::libtool24
  - Updated my dists to latest
  - Drop AnyEvent::WebSocket::Client on < 5.10
  - Drop Validate::Tiny on < 5.10
  - Drop Yars::Command::yars_exercise on < 5.10.1
