@@ -16,36 +16,41 @@ remove = Test::More
 
 [Prereqs]
 Acme::Alien::DontPanic                         = 0.038
-Acme::Alien::DontPanic2                        = 0.2100
+Acme::Alien::DontPanic2                        = 0.3200
 Acme::Ford::Prefect                            = 0.038
-Acme::Ford::Prefect2                           = 0.2100
+Acme::Ford::Prefect2                           = 0.3200
 Acme::Ford::Prefect::FFI                       = 0.28
 Alien                                          = 0.94
-Alien::Base                                    = 0.038
-Alien::Base::Wrapper                           = 0.03
+Alien::Base                                    = 0.041
+Alien::Base::ModuleBuild                       = 0.040
+Alien::Base::Wrapper                           = 0.04
 Alien::bison                                   = 0.19
-Alien::Build                                   = 0.28
-Alien::Build::MB                               = 0.01
+Alien::Build                                   = 0.36
+Alien::Build::MB                               = 0.02
 Alien::Build::Plugin::Fetch::Cache             = 0.01
 Alien::bz2::Installer                          = 0.05
 Alien::CMake                                   = 0.08
-Alien::curl                                    = 0.05
-Alien::Editline                                = 0.07
+Alien::curl                                    = 0.06
+Alien::Editline                                = 0.08
 Alien::FFI                                     = 0.16
 Alien::flex                                    = 0.12
 Alien::gmake                                   = 0.19
 Alien::Hunspell                                = 0.08
 Alien::Libarchive                              = 0.28
 Alien::Libarchive::Installer                   = 0.15
+Alien::Libarchive3                             = 0.28
 Alien::Libbz2                                  = 0.22
 Alien::libtool24                               = 0.04
 Alien::LibYAML                                 = 2.01
+Alien::LZO                                     = 0.02
 Alien::m4                                      = 0.09
 Alien::MSYS                                    = 0.07
 Alien::MSYS2                                   = 0.02
 Alien::nasm                                    = 0.18
+Alien::Nettle                                  = 0.03
 Alien::patch                                   = 0.11
 Alien::pkgconf                                 = 0.10
+Alien::Libxml2                                 = 0.01
 Alien::xz                                      = 0.04
 ;Alt::Alien::FFI::System                       = 0.16
 ;Alt::ExtUtils::PkgConfig::PLICEASE            = 1.15
@@ -56,27 +61,27 @@ AnyEvent::Git::Wrapper                         = 0.10
 AnyEvent::Ident                                = 0.07
 AnyEvent::Open3::Simple                        = 0.86
 AnyEvent::WebSocket::Client                    = 0.38
-App::af                                        = 0.08
+App::af                                        = 0.09
 App::cpangitify                                = 0.12
 App::pwhich                                    = 1.14
 App::palien                                    = 0.03
 App::RegexFileUtils                            = 0.07
 App::spaceless                                 = 0.07
-Archive::Ar::Libarchive                        = 2.05
+Archive::Ar::Libarchive                        = 2.06
 Archive::Libarchive::Any                       = 0.0900
 Archive::Libarchive::FFI                       = 0.0900
 Archive::Libarchive::XS                        = 0.0901
 Authen::Simple::PlugAuth                       = 0.02
 Class::Inspector                               = 1.31
-Clustericious                                  = 1.23
+Clustericious                                  = 1.24
 Clustericious::Coder::BSON                     = 0.01
 Clustericious::Admin                           = 1.09
-Dist::Zilla::App::Command::aliendeps           = 0.02
-Dist::Zilla::Plugin::AlienBuild                = 0.11
+Dist::Zilla::App::Command::aliendeps           = 0.03
+Dist::Zilla::Plugin::AlienBuild                = 0.16
 Dist::Zilla::Plugin::Alt                       = 0.04
 Dist::Zilla::Plugin::Author::Plicease          = 2.12
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
-Dist::Zilla::Plugin::InsertExample             = 0.06
+Dist::Zilla::Plugin::InsertExample             = 0.07
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::jQuery                    = 0.04
 Dist::Zilla::Plugin::MathInt64                 = 0.09
@@ -89,7 +94,7 @@ Env::ShellWords                                = 0.01
 FFI                                            = 1.10
 FFI::CheckLib                                  = 0.15
 FFI::ExtractSymbols                            = 0.03
-FFI::Platypus                                  = 0.45
+FFI::Platypus                                  = 0.47
 FFI::Platypus::Lang::CPP                       = 0.04
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.02
 FFI::Platypus::Lang::Fortran                   = 0.07
@@ -103,6 +108,7 @@ File::Listing::Ftpcopy                         = 0.07
 File::Which                                    = 1.21
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.03
+Module::Build::FFI                             = 0.46
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.58
 Photography::DX                                = 0.02
@@ -121,13 +127,13 @@ Shell::Config::Generate                        = 0.26
 Shell::Guess                                   = 0.06
 String::Template                               = 0.19
 Term::EditLine                                 = 0.11
-Test::Alien                                    = 0.12
+Test::Alien                                    = 0.14
 Test::CChecker                                 = 0.08
-Test::Clustericious::Blocking                  = 0.03
-Test::Clustericious::Cluster                   = 0.34
-Test::Exec                                     = 0.02
+Test::Clustericious::Blocking                  = 0.04
+Test::Clustericious::Cluster                   = 0.35
+Test::Exec                                     = 0.03
 Test::Fixme                                    = 0.16
-Test::Script                                   = 1.16
+Test::Script                                   = 1.18
 Test::Script::Async                            = 0.02
 Test::Version                                  = 2.05
 Text::Hunspell::FFI                            = 0.02
